--- a/myStyle.css
+++ b/myStyle.css
@@ -1,15 +1,44 @@
 h1 {
     color: black;
 }
+h2 {
+    text-align: center;
+}
 
 #intro {
-    text-align: center;
+    text-align: left;
     border: 2px solid;
     margin: 10px;
 }
 
-img {
+#intro h1 {
+    margin-top: 200px;
+    margin-left: 60px;
+    font-size: 70px;
+}
+#face {
+    
+    margin-right: 10px;
+    width: 190px;
+    border-radius: 40px;
+}
+#job{
+    font-size: 60px;
+    text-align: left;
+    margin-left: 75px;
+    
+}
+td {
+    border: 1px soild;
+}
+
+#links {
+    text-align: center;
+}
+
+.logo {
     width: 100px;
+    margin-right: 20px;
 }
 
 canvas {
